Fix blur not showing up on webkit

--- a/src/App.scss
+++ b/src/App.scss
@@ -417,6 +417,7 @@ header {
     position: sticky;
     background-color: rgba(0, 0, 0, 0.5);
     backdrop-filter: blur(5px);
+    -webkit-backdrop-filter: blur(5px);
     box-shadow: -10px 0 10px rgba(0, 0, 0, 0.1);
     z-index: 10;
     top: 0;
@@ -754,6 +755,7 @@ hr {
     gap: 1rem;
     background-color: rgba(0, 0, 0, 0.5);
     backdrop-filter: blur(5px);
+    -webkit-backdrop-filter: blur(5px);
     box-shadow: -10px 0 10px rgba(0, 0, 0, 0.1);
     padding: 10px 5px;
 
@@ -1032,6 +1034,7 @@ aside {
     gap: 1rem;
     background-color: rgba(0, 0, 0, 0.5);
     backdrop-filter: blur(5px);
+    -webkit-backdrop-filter: blur(5px);
     box-shadow: -10px 0 10px rgba(0, 0, 0, 0.1);
     padding: 10px 5px;
 
